# controllers/Cart.js
@@ -69,7 +69,32 @@ module.exports.cartRemoveDELETE = function cartRemoveDELETE (req, res, next) {
                 utils.writeJson(res,{message: "Books removed!"});
         })
         .catch(function (response) {
-            utils.writeJson(res, response, response.errorCode || 500);
+            console.error(response);
+            utils.writeJson(res, {message: "Internal Server Error!"}, 500);
+        });
+};
+
+module.exports.cartSetQuantityPUT = function cartSetQuantityPUT (req, res, next) {
+    var bookId = req.swagger.params['bookId'].value;
+    var quantity = req.swagger.params['quantity'].value;
+
+    if(!session.userIdExists()){
+        utils.writeJson(res, {message: "You must login to perform this operation!"}, 403);
+        return;
+    }
+
+    let userId = session.getUserId();
+
+    Cart.cartSetQuantityPUT(userId,bookId,quantity)
+        .then(function (response) {
+            if(response.length)
+                utils.writeJson(res, response);
+            else
+                utils.writeJson(res, {message: "The book wasn't in the cart!"}, 404);
+        })
+        .catch(function (response) {
+            console.error(response);
+                utils.writeJson(res, {message: "Internal Server Error!"}, 500);
         });
 };
 
@@ -90,6 +115,9 @@ module.exports.cartUpdatePUT = function cartUpdatePUT (req, res, next) {
         })
         .catch(function (response) {
             console.log(response);
-            utils.writeJson(res, response, response.errorCode || 500);
+            if(response.errorCode === 404)
+                utils.writeJson(res, {message: "Book Not Found!"}, 404);
+            else
+                utils.writeJson(res, {message: "Internal Server Error"}, 500);
         });
 };
